[package]
name = "keyed-set"
version = "0.4.2"
edition = "2021"
authors = ["Pierre Avital <pierre.avital@me.com>"]
description = "Keyed Set: a hashbrown-based HashSet that indexes based on projections of its elements."
readme = "README.md"
license = "EPL-2.0"
repository = "https://github.com/p-avital/keyed-set-rs"
keywords = ["data-structure", "hashmap"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.13.1", features = ["raw"] }
