[package]
name = "keyed-set"
version = "1.0.0"
edition = "2021"
authors = ["Pierre Avital <pierre.avital@me.com>"]
description = "Keyed Set: a hashbrown-based HashSet that indexes based on projections of its elements."
readme = "README.md"
license = "EPL-2.0"
repository = "https://github.com/p-avital/keyed-set-rs"
keywords = ["data-structure", "hashmap"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.14.3", features = ["raw"] }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_panics_doc = "warn"
missing_const_for_fn = "warn"
missing_safety_doc = "warn"
missing_errors_doc = "warn"
nurser = "warn"
